<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aspose Cells</string>
    <string name="action_settings">Settings</string>
    <string name="outcome">Outcome:</string>
    <string name="convert">Convert</string>
    <string name="browse">Browse</string>
    <string name="browse_location">Input File: </string>
    <string name="out_format">Output Format: </string>
    <string name="msg_set_appkeys">Please set App Key and App SID first. </string>
    <string name="msg_oops">Oops. Something went wrong. Please try again later. </string>
    <string name="prod_uri">http://api.aspose.com/v1.1</string>
    
    <color name="white">#FFF</color>
    
    <string-array name="cells_supported_formats">
        <item>PDF</item>
        <item>HTML</item>
    </string-array>

</resources>